// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hello /> renders data 1`] = `
<div>
  <h1
    className="css-1gao8uk"
  >
    Hello World!
  </h1>
  <styled(Component)>
    <Trans
      parent="div"
    >
      This is a missing translation
    </Trans>
  </styled(Component)>
  <h2 />
</div>
`;

exports[`<Hello /> renders loading 1`] = `
<div>
  <div>
    Loading...
  </div>
  <styled(Component)>
    <Trans
      parent="div"
    >
      This is a missing translation
    </Trans>
  </styled(Component)>
  <h2 />
</div>
`;
